a1/tests/reject/12.ul
void main() {
	else {
		false_statement
	}
}
